syntax = "proto3";

package boost;
option go_package = "boost/im_repo_boost";


service BoostService {
    rpc BoostPost(BoostRequest) returns (BoostResponse);
    rpc GetPosts(PageLimitRequest) returns (PostsResponse);
    rpc GetReels(PageLimitRequest) returns (PostsResponse);
    rpc GetBoostedPosts(PageLimitRequest) returns (PostsResponse);
    rpc GetBoostStats(BoostStatsRequest) returns (BoostStatsResponse);
}

message BoostRequest {
    string user_id = 1;       
    string post_id = 2;       
    int32 target_date = 3; 
    int32 target_view = 4;    
}

message BoostResponse {
    string message = 1;       
    bool success = 2;         
}

message BoostStatsRequest {
    string post_id = 1;       
}

message BoostStatsResponse {
    int32 views = 1;          
    int32 profile_clicks = 2; 
}

message PostsResponse {
    bool status = 1;
    repeated Posts posts = 2;
}

message Posts {
    string post_id = 1;
    string user_id = 2;
    int32 view_count = 3;          
    int32 click_count = 4; 
    string description = 5;
    repeated string paths = 6;
}

message PageLimitRequest {
    int32 page = 1;
    int32 limit = 2;
}
